7_openshift_labels/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-app
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logging-app
        image: busybox:latest
