7_openshift_labels/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      environment: dev
      region: EU
  template:
    metadata:
      labels:
        app: web
        environment: dev
        region: EU
    spec:
      containers:
      - name: web-app
        image: nginx:latest
        ports:
        - containerPort: 80
