7_openshift_labels/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web
    environment: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
